# ConnorFair36.github.io

./: _quarto.yml  index.qmd  pyproject.toml
docs/: Grammys_Analytics.html  about.html  index.html  search.json
myportfolio/: _quarto.yml
myportfolio/_site/: about.html  search.json
